--- a/android-developer.html
+++ b/android-developer.html
@@ -65,7 +65,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/3pillarglobal/bd573521-0f1b-403c-9e47-fd1855c5b647'>3Pillar Global - Android Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/3pillarglobal/bd573521-0f1b-403c-9e47-fd1855c5b647'>3Pillar Global - Android Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -73,7 +73,7 @@
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/246949-android-developer-m-d-f-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Developer (m/d/f) ... | JOIN</a></h5> 
+<h5><a href='https://endios.join.com/jobs/246949-android-developer-m-d-f-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Developer (m/d/f) ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -169,7 +169,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/vpTech/0da51a2d-1cc1-4252-8000-161675f9c2d3'>vpTech - Android Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/0da51a2d-1cc1-4252-8000-161675f9c2d3'>vpTech - Android Developer</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -240,7 +240,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workforcesource.recruiterbox.com/jobs/fk036u8/'>
+<h5><a href='https://workforcesource.recruiterbox.com/jobs/fk036u8/'>
     0708 - Stong Mid Android Developer at Workforce Source
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -254,7 +254,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/dkbcodefactory/e1c6dd05-b467-44fd-ac6a-aebe6dea60c5'>DKB Code Factory - Senior Android Developer (f,m,x)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dkbcodefactory/e1c6dd05-b467-44fd-ac6a-aebe6dea60c5'>DKB Code Factory - Senior Android Developer (f,m,x)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -266,7 +266,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/coinsquare/dc741e0d-d11f-48a4-8935-e5164bd88895'>Coinsquare - Android Developer - Kotlin</a></h5> 
+<h5><a href='https://jobs.lever.co/coinsquare/dc741e0d-d11f-48a4-8935-e5164bd88895'>Coinsquare - Android Developer - Kotlin</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
@@ -300,7 +300,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://gapstars.recruitee.com/o/senior-android-developer'>
+<h5><a href='https://gapstars.recruitee.com/o/senior-android-developer'>
       Senior Android Developer - Gapstars
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -330,7 +330,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on:: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://smashingideas.applytojob.com/apply/pBLtoZ9siW/Android-Developer'>Android Developer - Smashing Ideas - Career Page</a></h5> 
+<h5><a href='http://smashingideas.applytojob.com/apply/pBLtoZ9siW/Android-Developer'>Android Developer - Smashing Ideas - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -346,11 +346,11 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<h5><a href='https://mediamonks.workable.com/j/7A21AF7166'>MediaMonks - Jobs: Android Developer at MediaMonks HQ - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mediamonks.workable.com/j/7A21AF7166'>MediaMonks - Jobs: Android Developer at MediaMonks HQ - Apply online</a></h5> 
 <p><span class="badge badge-light">North Holland, Netherlands</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oAghafw1&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngDCBKwl&jvi=oAghafw1,Job&jvk=Job'>Medidata Solutions Careers - Sr. Android Developer / Mobile Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qnh9Vfws&k=Job&j=oAghafw1&__jvst=Employee+Referral&__jvsd=sUv5Pfw3&__jvsc=Twitter&bid=ngDCBKwl&jvi=oAghafw1,Job&jvk=Job'>Medidata Solutions Careers - Sr. Android Developer / Mobile Engineer</a></h5> 
 <p><span class="badge badge-light">New York New York</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
@@ -449,7 +449,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GCSMalta/743999690116296-senior-android-developer'>GCS Malta Senior Android Developer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/GCSMalta/743999690116296-senior-android-developer'>GCS Malta Senior Android Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
@@ -465,7 +465,7 @@ Experience in Go, Javascript, Swift, Kotlin Git(Hub), TDD, BDD, API integrations
 <p><span class="badge badge-light"></span></p>
 <p>Jun 21, 2019 ... Apply online for the job of Android Developer at Zealcon.</p>
 <hr/>
-<h5><a href='https://oozou.workable.com/j/F85BA86966'>Oozou - Jobs: Android Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oozou.workable.com/j/F85BA86966'>Oozou - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-30</p>
 <hr/>
